--- a/ottergram/stylesheets/styles.css
+++ b/ottergram/stylesheets/styles.css
@@ -1,22 +1,23 @@
 @font-face {
   font-family: "lakeshore";
+  font-style: normal;
+  font-weight: normal;
   src: url("fonts/LAKESHOR-webfont.eot");
   src: url("fonts/LAKESHOR-webfont.eot?#iefix") format("embedded-opentype"),
     url("fronts/LAKESHOR-webfont.woff") format("woff"),
     url("fonts/LAKESHOR-webfont.ttf") format("truetype"),
     url("fonts/LAKESHOR-webfont.svg#lakeshore") format("svg");
-  font-weight: normal;
-  font-style: normal;
 }
+
 @font-face {
   font-family: "airstreamregular";
+  font-style: normal;
+  font-weight: normal;
   src: url("fonts/Airstream-webfont.eot");
   src: url("fonts/Airstream-webfont.eot?#iefix") format("embedded-opentype"),
     url("fonts/Airstream-webfont.woff") format("woff"),
     url("fonts/Airstream-webfont.ttf") format("truetype"),
     url("fonts/Airstream-webfont.svg#airstreamregular") format("svg");
-  font-weight: normal;
-  font-style: normal;
 }
 
 html, body {
@@ -24,11 +25,10 @@ html, body {
 }
 
 body {
+  background: rgb(149, 194, 215);
   display: flex;
   flex-direction: column;
-
   font-size: 10px;
-  background: rgb(149, 194, 215);
 }
 
 a[href="#"] {
@@ -43,27 +43,26 @@ a[href="#"] {
 }
 
 .main-content {
-  flex: 1 1 auto;
   display: flex;
+  flex: 1 1 auto;
   flex-direction: column;
 }
 
 .logo-text {
   background: white;
-
-  text-align: center;
-  text-transform: uppercase;
   font-family: lakeshore;
   font-size: 37px;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .thumbnail-title {
-  display: block;
-  margin: 0;
-  padding: 4px 10px;
   background: rgb(96, 125, 139);
   color: rgb(202, 238, 255);
+  display: block;
   font-size: 18px;
+  margin: 0;
+  padding: 4px 10px;
 }
 
 .thumbnail-image {
@@ -71,34 +70,31 @@ a[href="#"] {
   width: 100%;
 }
 
-
 .thumbnail-item {
-  display: inline-block;
-  width: 120px;
-  min-width: 120px;
-  max-width: 120px;
   border: 1px solid rgb(100%, 100%, 100%);
-  border: 1px solid rgba(100%, 100%, 100%, 0.8)
+  border: 1px solid rgba(100%, 100%, 100%, 0.8);
+  display: inline-block;
+  max-width: 120px;
+  min-width: 120px;
+  width: 120px;
 }
 
 .thumbnail-list {
-  flex: 0 1 auto;
-  order: 2;
   display: flex;
+  flex: 0 1 auto;
   justify-content: space-between;
   list-style: none;
-  padding: 0;
-
-
-  white-space: nowrap;
+  order: 2;
   overflow-x: auto;
+  padding: 0;
+  white-space: nowrap;
 }
 
 .detail-image-container {
-  flex: 1 1 auto;
-  display: flex;
-  justify-content: center;
   align-items: center;
+  display: flex;
+  flex: 1 1 auto;
+  justify-content: center;
 }
 
 .detail-image-frame {
@@ -111,15 +107,11 @@ a[href="#"] {
 }
 
 .detail-image-title {
-  position: absolute;
   bottom: -16px;
-  left: 4px;
-
-  font-family: airstreamregular;
   color: white;
-
-
-  text-shadow: rgba(0,0,0,0.9) 1px 2px 15px;
+  font-family: airstreamregular;
   font-size: 40px;
-
+  left: 4px;
+  position: absolute;
+  text-shadow: rgba(0, 0, 0, 0.9) 1px 2px 15px;
 }
